--- a/src/app/json-list/json-list.component.html
+++ b/src/app/json-list/json-list.component.html
@@ -1,1 +1,16 @@
-<p>json-list works!</p>
+<input type="text" [(ngModel)]="searchTerm" placeholder="Search">
+
+<ul>
+  <li *ngFor="let item of items | filter: searchTerm" [class.selected]="isSelected(item.value)" (click)="selectItem(item.value)">
+    {{ item.value }}
+  </li>
+</ul>
+
+<div *ngIf="selectedItems.length > 0">
+  <h4>Selected Items:</h4>
+  <ul>
+    <li *ngFor="let selectedItem of selectedItems">
+      {{ selectedItem }}
+    </li>
+  </ul>
+</div>
